substitui BIRT por Thymeleaf e adiciona logging em arquivo
- Remove BIRT (viewservlets 4.5) e substitui por Thymeleaf 3.1 para
  geração de relatórios HTML imprimíveis (RelatorioEngine + template HTML)
- Adiciona Logback + SLF4J com bridge JUL→SLF4J; logs gravados em
  logs/am-sis.log com rotação por data/tamanho
- Remove commons-io (era transitivo do BIRT); BinarioApp usa readAllBytes()
- Atualiza README com tecnologias, papéis de usuário e referência de API
- Atualiza .gitignore: adiciona logs/, data/, tomcat.*/
- Arquiva mudança fatjar-embedded-and-security-fixes no openspec
- Sincroniza specs: relatorio-arquivamento (Thymeleaf) e deploy-fatjar (novo)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>